[package]
name = "cg-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = { version = "23.0.1", features = ["replay"] }
pollster = { version = "0.4.0", features = ["macro"] }
glam = { version = "0.29.2", features = ["bytemuck", "rand"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
] }
tobj = "4.0.2"
include_dir = "0.7.4"
